# mlx-inference-workbench

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  Makefile  README.md  clippy.toml  commitlint.config.js  pyproject.toml  release-please-config.json
.github/workflows/: bench-nightly.yml  ci.yml  release.yml
benchmarks/: __init__.py  cli.py  harness.py  metrics.py  run_benchmark.py
configs/experiments/: agentic_coding_v1_stub.yaml  baseline_mlx_lm.yaml  protocol_compare_mlx_lm_qwen35_2b.yaml  protocol_compare_mtplx_qwen35_2b.yaml  smoke_minimal.yaml  smoke_mlx_lm_tiny.yaml  smoke_mtplx_tiny.yaml
configs/hardware/: m5_max_128gb.yaml
crates/metal_stream/: Cargo.toml
crates/metal_stream/shaders/: stream.metal
crates/metal_stream/src/: lib.rs  main.rs
datasets/: README.md  agentic_coding_v1.jsonl  agentic_coding_v1.sha256  smoke_v1.jsonl  smoke_v1.sha256
docs/: HLD.md  TASKS.md
docs/HLD.diagrams/: container-proposed.csv  context.csv  error-comparison-blocked.mmd  primary-flow.mmd
docs/notes/: coverage.md  mlx-text-inference-engines.md  mtplx-engine.md  phase1-architecture.md  python-lint.md  rust-metal-dod.md  tdd-process.md
docs/spikes/: 005_thermal_data.jsonl  005_thermal_reproducibility.md  008_m5_max_ceilings.md  008b_rust_metal_stream_ceiling.md  00_mtplx_familiarization.md
experiments/: README.md
experiments/00_mtplx_familiarization/: README.md
experiments/01_baseline_m5max/: README.md
experiments/02_stock_mlx_comparison/: README.md
experiments/02_stock_mlx_comparison/artifacts/: SHA256SUMS
experiments/02_stock_mlx_comparison/artifacts/81aff0e72f89/: iterations.parquet  summary.json
experiments/02_stock_mlx_comparison/artifacts/f2f5a38b129d/: iterations.parquet  summary.json
scripts/: archive_run_artifacts.py  check_core_coverage.py  commitlint_range.sh  thermal_analysis.py  thermal_validation.py  verify_m5_max_ceilings.py
src/workbench/: __init__.py  ceilings.py  comparability.py  config.py  hardware.py  hardware_profile.py  metrics.py  models.py  orchestrator.py  paths.py  prompts.py  statistics_compare.py  thermal.py
src/workbench/engines/: __init__.py  base.py  mlx_lm_engine.py  mtplx_engine.py  registry.py  stub.py  timeout.py
src/workbench/storage/: __init__.py  run_store.py
tests/: test_placeholder.py
tests/integration/: test_mlx_lm_contract.py  test_stub_e2e.py
tests/unit/: test_agentic_coding_dataset.py  test_archive_run_artifacts.py  test_ceilings.py  test_cli_behavior.py  test_comparability.py  test_compare_quality_gate.py  test_compare_runs_behavior.py  test_config.py  test_correctness_references.py  test_engines_stub_registry.py  test_hardware_git_sha.py  test_hardware_profile.py  test_metrics.py  test_mlx_lm_seed_memory.py  test_mlx_lm_stream_fallback.py  test_mlx_lm_timeout_paths.py  test_mtplx_config.py  test_mtplx_engine.py  test_orchestrator_gates.py  test_orchestrator_owns_timeout.py  test_orchestrator_timeout.py  test_paths.py  test_prompts.py  test_run_store.py  test_statistics_compare.py  test_store_compare_pipeline.py  test_thermal_behavior.py  test_validate_correctness.py
