[project]
name = "mlx-inference-workbench"
version = "0.1.1"
description = "Personal workbench for optimizing LLM text inference on Apple Silicon with custom Metal kernels"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.30.0",
    "mlx-lm>=0.22.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mlflow>=2.14.0",
    "pyarrow>=15.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]
profiling = [
    "matplotlib>=3.8",
    "pandas>=2.1",
    "plotly>=5.18",
]
mtplx = [
    "mtplx",
]

[project.scripts]
bench = "benchmarks.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workbench", "benchmarks"]

[tool.hatch.build.targets.wheel.sources]
"src/workbench" = "workbench"
"benchmarks" = "benchmarks"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "gpu: requires Apple Silicon Metal GPU (self-hosted runner only)",
    "slow: takes >60s, skipped in pre-merge CI",
    "integration: cross-language or multi-component tests",
    "nightly: only runs in nightly scheduled CI",
    "weekly: only runs in weekly scheduled CI",
]

# Coverage gate (issue #23): scientific core only — not scripts/, spikes/, or CLI chrome.
# Overall floor is intentionally conservative (80%); raise toward 90% as tests grow.
[tool.coverage.run]
branch = true
source = ["workbench"]
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
precision = 1
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
    "src/workbench",
    "*/site-packages/workbench",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
