[package]
name = "metal_stream"
version = "0.1.0"
edition.workspace = true
description = "Hand-tuned Metal STREAM bandwidth ceiling probe (Phase 3 / #8 kernel denominator)"
publish = false

[[bin]]
name = "metal_stream"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
